# savings_manager_cli

./: .gitignore  README.md  pyproject.toml
docs/: Savings Manager CLI
savings_manager_cli/: api_consumers.py  main.py  utils.py
src/: api_consumers.py  config.py  custom_types.py  main.py  utils.py
