[tool.poetry]
name = "savings-manager-cli"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "savings_manager_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
requests = "^2.31.0"
pytz = "^2024.1"
tabulate = "^0.9.0"
pydantic = "^2.8.2"
mypy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
